--- a/ToDoList/todos.html
+++ b/ToDoList/todos.html
@@ -6,6 +6,7 @@
     <title>2DO LIST</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="todos.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,12 +14,12 @@
     <div class="container">
         <h1>2Do List</h1>
 
-        <input type="text">
+        <input type="text" placeholder="New To-do">
 
         <ul>
-            <li><span class="trash">O</span> Pick up John</li>
-            <li><span class="trash">O</span> Buy flowers</li>
-            <li><span class="trash">O</span> Grab dinner at Pappy's</li>
+            <li><span class="trash">o</span> Pick up John</li>
+            <li><span class="trash">o</span> Buy flowers</li>
+            <li><span class="trash">o</span> Grab dinner at Pappy's</li>
         </ul>
     </div>
 
