--- a/ToDoList/todos.html
+++ b/ToDoList/todos.html
@@ -7,20 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="todos.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <div class="container">
-        <h1>2Do List</h1>
+        <h1>2Do List <i class="fas fa-pencil-alt"></i></h1>
 
         <input type="text" placeholder="New To-do">
 
-        <ul>
-            <li><span class="trash">o</span> Pick up John</li>
-            <li><span class="trash">o</span> Buy flowers</li>
-            <li><span class="trash">o</span> Grab dinner at Pappy's</li>
-        </ul>
+        <ul></ul>
     </div>
 
     <script src="todos.js"></script>
