--- a/AddressCorrector/index.html
+++ b/AddressCorrector/index.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Address Corrector</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gaegu:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Address Corrector</h1>
+        <form id="input-form">
+            <div class="form-group">
+                <label>Please enter the address below: </label>
+                <textarea id="input-address" cols="32" rows="2"></textarea>
+            </div>
+            <button type="submit" class="btn btn-sm btn-primary">Submit</button>
+        </form>
+        
+        <div class="output">
+            <div id="formatted"></div>
+            <div id="components"></div>
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
